--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -58,16 +58,6 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-
-}
-
-@layer base {
-  * {
-    @apply border-[hsl(var(--border))];
-  }
-  body {
-    @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))];
-  }
 }
 
 @theme inline {
@@ -182,12 +172,9 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
-
-  }
+    @apply border-border;
+    }
   body {
     @apply bg-background text-foreground;
-
-  }
-
+    }
 }
